Login with email / username possible now

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,15 @@ test: &test
   username: root
   password:
 
+stage:
+  adapter: mysql2
+  encoding: utf8
+  database: heaven7_iwyg_stage
+  username: heaven7_iwyg
+  password: c34g6f8hj1
+  socket: /tmp/mysql.sock
+  port: 3306
+
 production:
   adapter: mysql2
   encoding: utf8
