--- a/config/email.yml
+++ b/config/email.yml
@@ -6,6 +6,14 @@ development:
   :user_name: iwyg+heavenseven.net
   :password: r1NmhzzisQw9 
   :enable_starttls_auto: false
+test:
+  :address: mail.heavenseven.net
+  :port: 25
+  :domain: www.heavenseven.net
+  :authentication: plain
+  :user_name: iwyg+heavenseven.net
+  :password: r1NmhzzisQw9
+  :enable_starttls_auto: false
 production:
   :address: mail.heavenseven.net
   :port: 587
