--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,10 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: mysql2
-  encoding: utf8
-  database: iwyg_development
-  username: root
-  password:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -15,8 +14,9 @@ test:
   encoding: utf8
   database: iwyg_test
   username: root
-  password:
+  password: 
 
+  
 stage:
   adapter: mysql2
   encoding: utf8
