--- a/config/email.yml
+++ b/config/email.yml
@@ -15,10 +15,10 @@ test:
   :password: r1NmhzzisQw9
   :enable_starttls_auto: false
 production:
-  :address: mail.heavenseven.net
+  :address: smtp.gmail.com
   :port: 587
-  :domain: www.heavenseven.net
+  :domain: gmail.com
   :authentication: plain
-  :user_name: iwyg+heavenseven.net
-  :password: r1NmhzzisQw9 
+  :user_name: iwantyouget@gmail.com
+  :password: heavenseven
   :enable_starttls_auto: true
