--- a/config/email.yml
+++ b/config/email.yml
@@ -1,11 +1,10 @@
 development:
-  :address: mail.heavenseven.net
-  :port: 25
-  :domain: www.heavenseven.net
-  :authentication: plain
-  :user_name: iwyg+heavenseven.net
-  :password: r1NmhzzisQw9 
-  :enable_starttls_auto: false
+  :address: smtp.gmail.com
+  :port: 587
+  :authentication: 'plain'
+  :user_name: iwantyouget@gmail.com
+  :password: a1s2d3f4g5h6j7k8l90
+  :enable_starttls_auto: true
 test:
   :address: mail.heavenseven.net
   :port: 25
@@ -18,7 +17,7 @@ production:
   :address: smtp.gmail.com
   :port: 587
   :domain: gmail.com
-  :authentication: plain
+  :authentication: 'plain'
   :user_name: iwantyouget@gmail.com
-  :password: heavenseven
+  :password: a1s2d3f4g5h6j7k8l90
   :enable_starttls_auto: true
