--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@
 .htaccess
 Thumbs.db
 .bundle/
+db/schema.rb
 db/development.sqlite3
 db/test.sqlite3
 log/*
 tmp/*
 rdoc/*
 public/system/*
+public/.htaccess
 nbproject/*       
 vendor/bundle/*
 Gemfile.lock
