--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,5 @@ nbproject/*
 vendor/bundle/*
 Gemfile.lock
 /nbproject/private/
-config/database.yml
-config/email.yml
+#config/database.yml
+#config/email.yml
