on stage without thin

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,5 @@ nbproject/*
 vendor/bundle/*
 Gemfile.lock
 /nbproject/private/
-#config/database.yml
-#config/email.yml
+config/database.yml
+config/email.yml
