setup to participate on groups

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -12,10 +12,31 @@ flags/en.png: flags/en-dcb6687a2c3e93d593308d2c0c923b49.png
 global/arrow_down_blue.gif: global/arrow_down_blue-1745764489d3e8ccb5b83f22b93b2bff.gif
 global/avatar_dummy.png: global/avatar_dummy-4889633e2b5ff9aa6ef853a6b025ea36.png
 global/avatar_dummy_micro.png: global/avatar_dummy_micro-907eb9fb83958a0693b1995aa096b50a.png
+global/avatar_dummy_micro_0.png: global/avatar_dummy_micro_0-a1eff050ed142f69c73e4a08e0d8e10f.png
+global/avatar_dummy_micro_1.png: global/avatar_dummy_micro_1-9bd056de0b8842b9710e4f7576f182aa.png
+global/avatar_dummy_micro_2.png: global/avatar_dummy_micro_2-2765ac182d1543977b56ffb2f1cfb26f.png
+global/avatar_dummy_micro_3.png: global/avatar_dummy_micro_3-db81e14f6b1dffb401d93d37e596b40c.png
+global/avatar_dummy_micro_4.png: global/avatar_dummy_micro_4-4e4ed0fb0b38bc4f3a1a3a25eac36e66.png
+global/avatar_dummy_micro_5.png: global/avatar_dummy_micro_5-7db989688bdfd28710d78285cef5e61c.png
+global/avatar_dummy_micro_6.png: global/avatar_dummy_micro_6-69120042f902f28d68e5b0eeb535c012.png
 global/avatar_dummy_profile.png: global/avatar_dummy_profile-c03ede0179aff01a0366b65477ac4d41.png
 global/avatar_dummy_small.png: global/avatar_dummy_small-c03ede0179aff01a0366b65477ac4d41.png
+global/avatar_dummy_small_0.png: global/avatar_dummy_small_0-ba276ebf5b88a23324545bf7eae4e947.png
+global/avatar_dummy_small_1.png: global/avatar_dummy_small_1-4916c8c4e886e528699b32419e658abd.png
+global/avatar_dummy_small_2.png: global/avatar_dummy_small_2-89251f715cd47b98f0ce26c6dd169fdd.png
+global/avatar_dummy_small_3.png: global/avatar_dummy_small_3-556966eec40155ea57fd9f0548f92d62.png
+global/avatar_dummy_small_4.png: global/avatar_dummy_small_4-84acc400d456b3e8aee617de93e4655c.png
+global/avatar_dummy_small_5.png: global/avatar_dummy_small_5-da27d43f37377a6764fc14cb96b2e520.png
+global/avatar_dummy_small_6.png: global/avatar_dummy_small_6-994ece97f51ec63ef41727aab8c61408.png
 global/avatar_dummy_thumbnail.png: global/avatar_dummy_thumbnail-0acaea0bcb060621d35d57b21c896dd3.png
 global/avatar_dummy_tiny.png: global/avatar_dummy_tiny-0acaea0bcb060621d35d57b21c896dd3.png
+global/avatar_dummy_tiny_0.png: global/avatar_dummy_tiny_0-4f8837abf8a9f30748b05a5e8962cbce.png
+global/avatar_dummy_tiny_1.png: global/avatar_dummy_tiny_1-c3163200cd06a6a1f8f3abc5f046fb39.png
+global/avatar_dummy_tiny_2.png: global/avatar_dummy_tiny_2-e11e50604e4c14c1d989d5a26026234e.png
+global/avatar_dummy_tiny_3.png: global/avatar_dummy_tiny_3-48d0813bfd7d139fe82896a0b67eaae2.png
+global/avatar_dummy_tiny_4.png: global/avatar_dummy_tiny_4-67c8198e2be91c844b3a59bbb7e45a58.png
+global/avatar_dummy_tiny_5.png: global/avatar_dummy_tiny_5-18597c9459e6af556a2f026a12507410.png
+global/avatar_dummy_tiny_6.png: global/avatar_dummy_tiny_6-3731178001fa8a06c878f4823910ade5.png
 global/bg_footer.png: global/bg_footer-d3dcea828fe92d8e9470415a11e97a88.png
 global/bg_main.gif: global/bg_main-bb6298a3a53a024732ec2b6ca52059ba.gif
 icons/action_refresh_blue.gif: icons/action_refresh_blue-cd9146cfb59e23519c2478930e4ec964.gif
@@ -87,7 +108,7 @@ rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 spinner.gif: spinner-1ef11460f983a370267498a01f6e5e5a.gif
 tiny_mce/spinner.gif: tiny_mce/spinner-042016a130976cacff054f182bdb3323.gif
 application.js: application-cfc339a2af267c61779dd74be3314441.js
-application.css: application-b93a09441410ac48452e77c98b7c900a.css
+application.css: application-4d57f7dc7e6a3793420fa664b1daefe9.css
 images/border.png: images/border-4517dd96800f1db66bad7292c9ac3022.png
 images/controls.png: images/controls-b7e68cd0fd7976df6eac3bb3e814c942.png
 images/ie6/borderBottomCenter.png: images/ie6/borderBottomCenter-5d472922bd29c8440c8a30be81b24ee6.png
