--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ Gemfile.lock
 config/database.yml
 config/email.yml
 
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
