--- a/config/settings.yml
+++ b/config/settings.yml
@@ -37,5 +37,6 @@ time:
 
 # ping
 ping:
-  visible_for: owners
-  visible_to: ['all', 'members', 'owner', 'me']
+  visible_for:
+    default: owner
+    values: ['all', 'members', 'owner', 'me']
